fix themes and colors

--- a/packages/backend/src/server/web/views/base.pug
+++ b/packages/backend/src/server/web/views/base.pug
@@ -11,8 +11,10 @@ html
 		meta(charset='utf-8')
 		meta(name='application-name' content='Speechka')
 		meta(name='referrer' content='origin')
-		meta(name='theme-color' content= themeColor || '#86b300')
-		meta(name='theme-color-orig' content= themeColor || '#86b300')
+		meta(name='theme-color' content= themeColor || '#606df7')
+		meta(name='theme-color-orig' content= themeColor || '#606df7')
+		//- meta(name='theme-color' content= themeColor || '#86b300')
+		//- meta(name='theme-color-orig' content= themeColor || '#86b300')
 		meta(property='twitter:card' content='summary')
 		meta(property='og:site_name' content= instanceName || 'Speechka')
 		meta(name='viewport' content='width=device-width, initial-scale=1')
