--- a/packages/backend/src/server/web/views/channel.pug
+++ b/packages/backend/src/server/web/views/channel.pug
@@ -5,7 +5,8 @@ block vars
 	- const url = `${config.url}/channels/${channel.id}`;
 
 block title
-	= `${title} | ${instanceName}`
+	= `${title}`
+	//- = `${title} | ${instanceName}`
 
 block desc
 	meta(name='description' content= channel.description)
