--- a/packages/backend/src/server/web/views/base.pug
+++ b/packages/backend/src/server/web/views/base.pug
@@ -38,13 +38,13 @@ html
 				= title || 'Speechka'
 
 		block desc
-			meta(name='description' content= desc || '✨🌎✨ A interplanetary communication platform ✨🚀✨')
+			meta(name='description' content= desc || '✨🌎✨ Платформа для общенияпловцов')
 
 		block meta
 
 		block og
 			meta(property='og:title'       content= title || 'Speechka') 
-			meta(property='og:description' content= desc || '✨🌎✨ A interplanetary communication platform ✨🚀✨') 
+			meta(property='og:description' content= desc || '✨🌎✨ Платформа для общения пловцов') 
 			meta(property='og:image'       content= img)
 
 		style
