--- a/packages/backend/src/server/web/views/note.pug
+++ b/packages/backend/src/server/web/views/note.pug
@@ -7,7 +7,8 @@ block vars
 	- const isRenote = note.renote && note.text == null && note.fileIds.length == 0 && note.poll == null;
 
 block title
-	= `${title} | ${instanceName}`
+	= `${title}`
+	//- = `${title} | ${instanceName}`
 
 block desc
 	meta(name='description' content= summary)
